objects/Child__c.object
<CustomObject>
    <label>Child</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Child Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>children</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Num__c</fullName>
        <label>Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hours__c</fullName>
        <label>hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>parent__c</fullName>
        <label>parent</label>
        <referenceTo>parent__c</referenceTo>
        <relationshipLabel>children</relationshipLabel>
        <relationshipName>children</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>